--- a/editor/src/app/globals.css
+++ b/editor/src/app/globals.css
@@ -44,3 +44,35 @@ body {
   
   
 }
+
+/* POPUP */
+
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.popup-content {
+  background: #2C2C2C;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+.popup {
+  background-color: var(--background);
+  color: var(--foreground);
+  position: absolute;
+  width: 30px;
+  @apply inline-flex justify-center w-40 rounded-md shadow-lg px-4 py-0.5 text-sm font-medium text-white hover:bg-orange-500 focus:outline-none;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
