--- a/editor/src/app/globals.css
+++ b/editor/src/app/globals.css
@@ -61,8 +61,8 @@ body {
 }
 
 .popup-content {
-  background: #2C2C2C;
-  padding: 20px;
+  background: var(--background);
+  padding: 15px;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
@@ -75,4 +75,30 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.addprotoboardpopupokbutton {
+  @apply dropdownmenubutton;
+  width: 50%;
+  float: right;
+}
+
+/* Remove the little arrows for number input fields */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.popupmenuinput {
+  float: right;
+  background-color: var(--background);
+  border-color: #525252;
+  border-width: 1px;
+  border-radius: 5px;
+
+}
+
+.popupinputline {
+  padding-bottom: 10px;
 }
